# University-Notes-Assistant-RAG-based-AI-Web-Application-

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/static/: main.js  style.css
app/templates/: index.html
data/: state.json
